# VoxelProject

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.txt  doxyconf.cfg
include/: client.h  componentdef.h  components.h  config.h  def.h  filesystem.h  game.h  input.h  logger.h  server.h  world.h
include/gfx/: graphics.h  renderer.h  shader.h  systems.h  window.h
src/: client.cpp  components.cpp  config.cpp  filesystem.cpp  game.cpp  input.cpp  logger.cpp  main.cpp  server.cpp  world.cpp
src/gfx/: graphics.cpp  renderer.cpp  shader.cpp  systems.cpp  window.cpp
